# vggt

./: .gitignore  .gitmodules  README.md  demo_gradio.py  environment.yml  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.github/: environment.yml
.github/.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: devcontainer-build-and-push.yml
evaluation/: README.md  calibrate_smoothquant.py  download_dtu.py  download_dtu.sh  memory_profiler.py  preprocess_co3d.py  profiler.py  test_dtu.py  utils.py
merging/: merge.py
vggt/heads/: camera_head.py  dpt_head.py  track_head.py
vggt/layers/: attention.py  block.py  rope.py  vision_transformer.py
vggt/models/: aggregator.py  vggt.py
vggt/quantization/: __init__.py  smoothquant.py
